Prevent overflow. Change breakpoint to med screen

--- a/src/Components/ProductOverview/ProductInfo/OrderSelection.scss
+++ b/src/Components/ProductOverview/ProductInfo/OrderSelection.scss
@@ -9,6 +9,10 @@
     color: red;
 }
 
+.out-of-stock {
+    font-size: 0.8em;
+}
+
 .select-quantity {
     margin: 0.3em;
     background-color: #323639;;
